--- a/backend(java, springboot)/vestige/src/main/resources/application.yml
+++ b/backend(java, springboot)/vestige/src/main/resources/application.yml
@@ -14,3 +14,4 @@ spring:
       ddl-auto: create # create, update, none (서버 실행시마다 create면 테이블이 계속해서 새로 만들어진다. 한번 실행 후 update로 바꿔야한다.
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl #(개발자가 적은 이름 그대로 컬럼명이 생성된다.)
+    show-sql: true
