--- a/backend(java, springboot)/vestige/src/main/resources/application.yml
+++ b/backend(java, springboot)/vestige/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     password: vestige1234
   jpa:
     hibernate:
-      ddl-auto: create # create, update, none (서버 실행시마다 create면 테이블이 계속해서 새로 만들어진다. 한번 실행 후 update로 바꿔야한다.
+      ddl-auto: update # create, update, none (서버 실행시마다 create면 테이블이 계속해서 새로 만들어진다. 한번 실행 후 update로 바꿔야한다.
       naming:
         #커멜표기법으로 적혀있는 변수명을 스네이크 표기법으로 변경한다
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
